# gitsandbox

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/calc/: __init__.py  __main__.py  calculator.py
tests/: test_calc.py
