[tool.poetry]
name = "calc"
version = "0.1.0"
description = "tjohopp"
authors = ["Martin Nalepa <apelansign@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.8.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
